got login to work then did something and fucked it up, FAKE NEWS

--- a/fantasyRefs/apps/refApp/templates/refApp/TeamPages.html
+++ b/fantasyRefs/apps/refApp/templates/refApp/TeamPages.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Teams</title>
+        <title>Fantasy Home</title>
     </head>
     <body>
-       <!--display all teams in league along with current statistics-->
-       <!--create table displaying info. LeaderBoard??? --> 
+       <h1>Welcome {{user.name}}</h1>
+       
     </body>
 </html>
