--- a/fantasyRefs/apps/refApp/static/refApp/css/style.css
+++ b/fantasyRefs/apps/refApp/static/refApp/css/style.css
@@ -1,7 +1,56 @@
 body {
-	background-color: #110339;
-	color: #FF2719;
+	/*background-color: #110339;
+	color: #FF2719;*/
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background: #000;
 }
+
+.fade  {
+	position: relative;
+	width: 100%;
+	min-height: 60vh;
+	top: -25px;
+	background-image: linear-gradient(0deg, transparent, black 75%);
+	z-index: 1;
+}
+
+.headUL {
+	display: flex;
+	justify-content: center;
+	position: relative;
+	height: 800px;
+	perspective: 400px;
+	color: #feda4a;
+	font-family: 'Pathway Gothic On', sans-serif;
+	font-size: 500%;
+	font-weight: 600;
+	letter-spacing: 6px;
+	line-height: 150%;
+	text-align: justify;
+}
+
+.crawl { 
+	position: relative;
+	top: -100px;
+	transform-origin: 50% 100%;
+	animation: crawl 60s linear;
+}
+
+@keyframes crawl {
+	0% {
+		top: 0;
+		transform: rotateX(20deg) translateZ(0);
+	}
+	100% {
+		top: -6000px;
+		transform: rotateX(25deg) translateZ(-2500px);
+
+	}
+}
+
+
 
 ul {
 	background-color: #110339;
@@ -10,4 +59,9 @@ ul {
 
 ul li {
 	color: #FFFFFF;
+}
+
+#logFrom {
+	border-style: ridge;
+
 }
