--- a/fantasyRefs/apps/refApp/templates/refApp/index.html
+++ b/fantasyRefs/apps/refApp/templates/refApp/index.html
@@ -11,9 +11,9 @@
 
     <h1>Fantasy Referee</h1>
     <p>Here we have a fantasy football style league but instead of player you earn points based on hte refs and penalties given</p>
-    <div class="fade"></div>
-    <section class="headUL">
-    <ul class="crawl">How it Works
+    
+    <section class="topText">
+    <ul class="head" >How it Works
       <li id="sections">Earning Points:
         <ul>
           <li>5 Yrd Penalty --> 1 point</li>
