--- a/fantasyRefs/apps/refApp/templates/refApp/TeamPages.html
+++ b/fantasyRefs/apps/refApp/templates/refApp/TeamPages.html
@@ -6,6 +6,12 @@
     </head>
     <body>
        <h1>Welcome {{user.name}}</h1>
-       
+       <h3>Create new team</h3>
+       <form action="" method="post">
+       {% csrf_token %}
+       	<input type="text" name="teamName" value="nickName"/>
+       	<input type="text" name="" value=""/>
+       	<input type="submit" name="submit" value="submit"/>
+       </form>
     </body>
 </html>
