login still no work

--- a/fantasyRefs/apps/login/templates/login/index.html
+++ b/fantasyRefs/apps/login/templates/login/index.html
@@ -19,22 +19,22 @@
           <li>5 Yrd Penalty ---> 1 point</li>
           <li>10 Yrd Penalty ---> 2 points</li>
           <li>15 Yrd Penalty ---> 3 points</li>
-          <li>Half the Distance to the Goal --> 3 points</li>
-          <li>Player Get in the Face of Your Ref --> 2 points</li>
+          <li>Half the Distance to the Goal ---> 3 points</li>
+          <li>Player Get in the Face of Your Ref ---> 2 points</li>
         </ul>
       </li>
       <li id="sections">Point Multipliers:
         <ul id="sectText">
-          <li>Crowd "Boo" so Loud that the Ref Cannot be Heard --> x2 points(applies to points earned on penalty called)</li>
-          <li>Head Ref for Monday Night Football --> x1.5 points (applies to total points earned from game)</li>
-          <li>Head Ref for Super Bowl --> x2 points(applies to total points earned from game)</li>
+          <li>Crowd "Boo" so Loud that the Ref Cannot be Heard ---> x2 points(applies to points earned on penalty called)</li>
+          <li>Head Ref for Monday Night Football ---> x1.5 points (applies to total points earned from game)</li>
+          <li>Head Ref for Super Bowl ---> x2 points(applies to total points earned from game)</li>
         </ul>
       </li>
       <li id="sections">Loss of Points:
         <ul id="sectText">
-          <li>Sports Commintators Make Fun of Your Ref --> -1 point</li>
-          <li>Player Gets Up In Your Refs Face --> -1 point</li>
-          <li>Your Refs Call is Challenged AND Overturned --> Lose all current points for game</li>
+          <li>Sports Commintators Make Fun of Your Ref ---> -1 point</li>
+          <li>Player Gets Up In Your Refs Face ---> -1 point</li>
+          <li>Your Refs Call is Challenged AND Overturned ---> Lose all current points for game</li>
         </ul>
       </li>
     </ul>
@@ -49,7 +49,7 @@
     <div>
       <form id="logForm" action="{% url 'login:login' %}" method="post">
         {% csrf_token %}
-        Username: <input type="text" name="username">
+        Email: <input type="text" name="email">
         Password: <input type="password" name="password">
         <input type="submit" name="submit" value="Login">
       </form>
@@ -60,7 +60,7 @@
         Username: <input type="text" name="username" value=""/><br><br>
         Email: <input type="text" name="email" value=""/><br><br>
         Password: <input type="password" name="password" value=""/><br><br>
-        Confirm Password: <input type="password" name="confirm_password" value=""/><br><br>
+        Confirm Password: <input type="password" name="passvalid" value=""/><br><br>
         <input type="submit" name="submit" value="Register"/>
       </form>
     </div>  
