--- a/fantasyRefs/apps/login/templates/login/index.html
+++ b/fantasyRefs/apps/login/templates/login/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-
-    <title>Fantasy Refs</title>
-    {% load staticfiles %}
-    <link rel="stylesheet" href="{% static 'refApp/css/zebra.css' %}">
-  </head>
-  <body>
+<head>
+	<meta charset="UTF-8">
+	<title>Fantasy Refs</title>
+	{% load staticfiles %}
+    <link rel="stylesheet" href="{% static 'login/css/index.css' %}">
+</head>
+<body>
 
     <h1>Fantasy Referee</h1>
     <p>Here we have a fantasy football style league but instead of player you earn points based on hte refs and penalties given</p>
@@ -64,6 +62,5 @@
         <input type="submit" name="submit" value="Register"/>
       </form>
     </div>  
-
   </body>
-</html
+</html>
