--- a/fantasyRefs/apps/teamsApp/templates/teamsApp/index.html
+++ b/fantasyRefs/apps/teamsApp/templates/teamsApp/index.html
@@ -6,5 +6,11 @@
     </head>
     <body>
       <h1>Welcome {{user.username}}</h1> 
+		<ul>
+			{% for refs in Ref %}
+			<li>{{refs.name}}</li>
+			{% endfor %}
+		</ul>
+
     </body>
 </html>
